--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@gsap/react": "^2.1.2",
     "@onchainfi/connect": "^3.3.0",
+    "@privy-io/react-auth": "^3.7.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@rainbow-me/rainbowkit": "^2.2.9",
