--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@onchainfi/connect": "^3.3.0",
     "@privy-io/react-auth": "^3.7.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@supabase/supabase-js": "^2.84.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
+    "motion": "^12.23.24",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
