--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@gsap/react": "^2.1.2",
+    "@neynar/react": "^1.2.22",
     "@onchainfi/connect": "^3.3.0",
+    "@pigment-css/react": "^0.0.30",
     "@privy-io/react-auth": "^3.7.0",
+    "@privy-io/wagmi": "^2.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
