add:miniapps button

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "What is Base for ?",
-  "short_name": "Base for ?",
+  "name": "Basefor",
+  "short_name": "WIBF",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
