--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@gsap/react": "^2.1.2",
     "@neynar/react": "^1.2.22",
-    "@onchainfi/connect": "^3.3.0",
+    "@onchainfi/x402-aggregator-client": "^0.1.2",
     "@pigment-css/react": "^0.0.30",
     "@privy-io/react-auth": "^3.7.0",
     "@privy-io/wagmi": "^2.0.2",
